   [build-system]
   requires = ["setuptools>=61.0", "wheel"]
   build-backend = "setuptools.build_meta"

   [project]
   name = "pythondsap"
   version = "0.1.0"
   description = "A collection of Data Structures and Algorithm patterns implemented in Python."
   authors = [{ name = "Your Name", email = "your.email@example.com" }]
   license = "MIT"
   readme = "README.md"
   homepage = "https://github.com/yourusername/pythondsap"  # Update with your project URL
   keywords = ["data structures", "algorithms", "python", "testing"]

   dependencies = [
       "numpy>=1.21.0",
       "pandas>=1.3.0",
   ]


   [project.optional-dependencies]
   testing = [
       "pytest>=7.4.3",
       "pytest-cov>=4.1.0"
   ]

   [tool.pytest.ini_options]
   testpaths = ["tests"]
   python_files = ["test_*.py", "*_test.py"]